--- a/app/src/main/res/layout/activity_facts_list.xml
+++ b/app/src/main/res/layout/activity_facts_list.xml
@@ -6,8 +6,10 @@
                 name="viewModel"
                 type="com.example.telstraassignment.ui.facts.FactsListViewModel"/>
     </data>
-    <android.support.v4.widget.SwipeRefreshLayout android:layout_width="match_parent"
-                                                  android:layout_height="match_parent">
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <android.support.constraint.ConstraintLayout
                 android:id="@+id/swipe_refresh_layout"
@@ -34,5 +36,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
         </android.support.constraint.ConstraintLayout>
+
     </android.support.v4.widget.SwipeRefreshLayout>
+
 </layout>
